WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164434
Layout viewport wrong with RTL documents
https://bugs.webkit.org/show_bug.cgi?id=164434
Summary
Layout viewport wrong with RTL documents
Simon Fraser (smfr)
Reported
2016-11-04 14:35:34 PDT
Layout viewport wrong with RTL documents
Attachments
Patch
(19.97 KB, patch)
2016-11-04 14:51 PDT
,
Simon Fraser (smfr)
thorton
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-yosemite
(918.73 KB, application/zip)
2016-11-04 16:06 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews116 for mac-yosemite
(1.76 MB, application/zip)
2016-11-04 16:19 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2016-11-04 14:51:32 PDT
Created
attachment 293936
[details]
Patch
Build Bot
Comment 2
2016-11-04 16:06:04 PDT
Comment on
attachment 293936
[details]
Patch
Attachment 293936
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/2463902
New failing tests: fast/visual-viewport/rtl-zoomed-rects.html
Build Bot
Comment 3
2016-11-04 16:06:08 PDT
Created
attachment 293948
[details]
Archive of layout-test-results from ews101 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 4
2016-11-04 16:19:56 PDT
Comment on
attachment 293936
[details]
Patch
Attachment 293936
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/2463926
New failing tests: fast/visual-viewport/rtl-zoomed-rects.html
Build Bot
Comment 5
2016-11-04 16:19:58 PDT
Created
attachment 293956
[details]
Archive of layout-test-results from ews116 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-yosemite Platform: Mac OS X 10.10.5
Simon Fraser (smfr)
Comment 6
2016-11-04 18:01:25 PDT
https://trac.webkit.org/changeset/208409
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug